--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<li><a href="#about">About</a></li>
 			<li><a href="#service">service</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="#review">Review</a></li>
 		</ul>
 	</header>
 	<!--====== Header Section End ======-->
@@ -66,7 +66,6 @@
 					<div class="col-md-7 about-text">
 						<h2>Ekstrakurikuler Coding</h2>
 						<p>Ekstrakurikuler coding merupakan kegiatan yang melatih peserta didik dalam merancang aplikasi secara visual dengan bertahap menyesuaikan tingkat kesulitannya. Hasil yang diberikan adalah sebuah program komputer sederhana yang dapat berjalan disetiap sistem operasi.</p>
-						<a href="#" class="site-btn mt10">Download CV</a>
 					</div>
 					
 					<div class="col-md-5 skill">
