--- a/index.html
+++ b/index.html
@@ -300,9 +300,18 @@
 							<div class="clint">
 								<img src="img/review/5.jpg" alt="">
 							</div>
-							<p>berilah bantuan kepada orang yang meminta pertolongan</p>
+							<p>Belajar lebih keras untuk masa depan</p>
 							<h2>Arvin Hazim Abdurrrahman</h2>
 							<h3>Kelas 81</h3>
+						</div>
+						<!-- Review item -->
+						<div class="review-item">
+							<div class="clint">
+								<img src="img/review/6.jpg" alt="">
+							</div>
+							<p>Coding berperan besar dalam perkembangan teknologi di zaman mendatang, makanya belajar coding itu penting dari sekarang</p>
+							<h2>Siggy Ahmad Ramadhani</h2>
+							<h3>Kelas 95</h3>
 						</div>
 					</div>
 				</div>
